# lens_trace

./: .gitignore  CMakeLists.txt  README.md  makefile
.github/workflows/: cmake.yml  jetson.yml  jetson_nano.yml  linux.yml  ubuntu20.04.yml  ubuntu20.04_amd.yml  ubuntu20.04_nvidia.yml  ubuntu_build_only.yml  ubuntu_opencl.yml
examples/accumulator/: CMakeLists.txt
examples/accumulator/resources/kernels/: accumulator.kernel
examples/accumulator/resources/shaders/: accumulator.frag  accumulator.vert  presentor.vert
examples/accumulator/src/: main.cpp
examples/custom_kernel/: CMakeLists.txt
examples/custom_kernel/resources/kernels/: custom_opencl.cl  custom_opencl.kernel
examples/custom_kernel/src/: main.cpp
examples/global_illumination/: CMakeLists.txt
examples/global_illumination/resources/kernels/: global_illumination.kernel
examples/global_illumination/src/: main.cpp
examples/opengl/: CMakeLists.txt  main.cpp
examples/opengl/resources/shaders/: basic.frag  basic.vert
examples/opengl/src/: main.cpp
include/: camera.h  renderer.h
include/lens_trace/: acceleration_structure_explicit.h  camera.h  engine.h  image_writer.h  model.h  renderer_cuda.h  renderer_opencl.h  renderer_optix.h  resource.h  scene_parser.h  structures.h
include/lens_trace/cuda/: renderer_cuda.h
include/lens_trace/opencl/: renderer_opencl.h
include/lens_trace/optix/: acceleration_structure_optix.h  renderer_optix.h
kernels/: acceleration_structure.cu  basic_cuda.cu
lens_trace/include/: acceleration_structure_optix.h  renderer_cuda.h  renderer_opencl.h  renderer_optix.h  scene_parser.h  structures.h
lens_trace/include/tinyobjloader/: tiny_obj_loader.h
lens_trace/src/: acceleration_structure_optix.cpp  camera.cpp  engine.cpp  main.cpp  model.cpp  renderer_cuda.cpp  renderer_opencl.cpp  renderer_optix.cpp  scene_parser.cpp
res/: cornell_box.mtl  cube_scene.mtl
resources/kernels/: basic_lighting_opencl.kernel  basic_opencl.kernel  basic_optix.cu
resources/kernels/cuda/: basic.cu
resources/kernels/opencl/: basic.cl  basic_lighting.cl  global_illumination.cl
resources/models/: cornell_box.mtl  cornell_box_lens.mtl  green_wall.mtl
resources/scenes/: basic.scene  basic2.scene  basic_cuda.scene  basic_lighting.scene  basic_opencl.scene  global_illumination.scene
src/: acceleration_structure.cpp  acceleration_structure.h  acceleration_structure_explicit.cpp  acceleration_structure_explicit.h  acceleration_structure_optix.cpp  acceleration_structure_optix.h  camera.cpp  engine.cpp  engine.h  image_writer.cpp  main.cpp  model.cpp  model.h  primitive.cpp  renderer.h  renderer_cuda.cpp  renderer_cuda.h  renderer_opencl.cpp  renderer_opencl.h  renderer_optix.cpp  renderer_optix.h  resource.cpp  scene_parser.cpp  structures.h
src/cuda/: renderer_cuda.cpp
src/cuda/kernels/: basic.cu  basic_cuda.cu
src/kernels/: acceleration_structure.cu  basic.cu  basic.kernel  basic_cuda.cu
src/opencl/: renderer_opencl.cpp
src/optix/: acceleration_structure_optix.cpp  renderer_optix.cpp
tests/: cuda_renderer_test.cc  opencl_renderer_test.cc
